# data_engineering_project

./: .dockerignore  .env.example  .gcloudignore  .gitattributes  .gitignore  Dockerfile  GEMINI.md  Makefile  README.md  check_stlouisfed.py  config.py  dashboard.py  docker-compose.yml  download_data.py  explore_gold_price.py  generate_docs.sh  ingest_manager.py  list_fred_provider.py  list_gold_indicators.py  list_providers.py  main.py  project_description.md  pyproject.toml  run.sh  search_fed_v2.py  search_fred_provider.py  test_dbnomics_codes.py  test_dbnomics_us.py  test_dbnomics_v3.py  test_fed_exists.py  test_h15.py
dags/: gold_pipeline_master.py
data/bronze/: central_bank_holdings.parquet  crude_oil.parquet  dxy.parquet  etf_flows.parquet  fx_usd_eur_api.parquet  gdt_demand.parquet  gold_premiums.parquet  gold_prices.parquet  gold_prices_api.parquet  gold_reserves_api.parquet  gold_stocks.parquet  mining_production.parquet  real_interest_rates_api.parquet  sp500.parquet  yield_10y.parquet
gold_dbt/: .user.yml  dbt_project.yml  ingest.py  ingest_from_web.py  profiles.yml
gold_dbt/macros/: sql_utils.sql  (+1 more)
research/: check_fed_datasets.py  check_fed_datasets_v2.py  explore_dbnomics.py  explore_dbnomics_areas.py  find_h15.py  list_all_providers.py  list_wb_commodity_series.py  list_wb_datasets.py  search_fed.py  search_gold_price.py  search_h15_tips.py  search_pzgold.py  search_tips.py  search_wgc_api.py  test_dbnomics_final.py  test_ecb.py
xls/: ETF_Flows_March_2026.xlsx  GDT_Tables_Q425_EN.xlsx  above-ground-gold-stocks.xlsx  gold-premiums.xlsx
(+22 files in other folders)
